[package]
name = "osciblaster"
version = "0.1.0"
authors = ["felix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.5"
clap = "3.0.0-beta.2"
yaml-rust = "0.4"
maplit = "1.0"
log = "0.4"
simplelog = "^0.10.0"
anyhow = "1.0"
ctrlc = { version = "3.1", features = ["termination"] }
